--- a/programs.html
+++ b/programs.html
@@ -60,6 +60,7 @@
                         <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
                         <a href="#" class="dropdown-item">Human Resources</a>
                         <a href="#" class="dropdown-item">Engineering Programs</a>
+                        <a href="#" class="dropdown-item">Quality Programs</a>
                     </div>
                 </div>
 
@@ -76,15 +77,6 @@
                     </div>
                 </div>
 
-
-                <!-- Pages Dropdown -->
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                    </div>
-                </div>
 
                 <!-- Contact Link -->
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -232,6 +224,17 @@
       </div>
     </div>
 
+    <!-- Program 13 -->
+    <div class="col-md-4 program-item hidden-program" style="display: none;">
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=13" class="card-img-top" alt="Quality Programs">
+        <div class="card-body text-center">
+          <h5 class="card-title">Quality Programs</h5>
+          <p class="card-text text-muted">Quality Programs</p>
+        </div>
+      </div>
+    </div>
+
   </div> <!-- row end -->
 
 </div>
@@ -251,11 +254,11 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Privacy Policy</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">FAQs & Help</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
+                    <a class="btn btn-link" href="terms.html">Terms & Condition</a>
+                    <a class="btn btn-link" href="faqs.html">FAQs & Help</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
@@ -264,7 +267,8 @@
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=61579270026809" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://wa.me/YOUR_PHONE_NUMBER" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
